--- a/Viel/index.html
+++ b/Viel/index.html
@@ -16,10 +16,18 @@
                 </div>
 
                 <div class="form__group field">
-                    <input type="number" required="" placeholder="Name" class="form__field" type="input">
-                    <label class="form__label" for="name">Numero</label>
+                        <input type="number" required="" placeholder="Name" class="form__field" type="input">
+                        <label class="form__label" for="name">Numero</label>
                 </div>
 
+                <div class="Result">
+                        <input type="number" readonly placeholder="RESULTADO">
+                </div>
+                    <div class="alingButton">
+                        <button onclick="enviar()" id="En">
+                             Button
+                        </button>
+                 </div>
             </div>
         </div>
      </div>
