--- a/Viel/index.html
+++ b/Viel/index.html
@@ -24,7 +24,7 @@
                         <input type="number" id="r" readonly placeholder="RESULTADO">
                 </div>
                     <div class="alingButton">
-                        <button>
+                        <button onclick="Enviar()">
                              Button
                         </button>
                  </div>
