--- a/Viel/index.html
+++ b/Viel/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora em Orientação a Objeto</title> <link rel="stylesheet" href="../Model/style.css">
+    <script src="../constrol/Metodos.js"></script>
 </head>
 <body>
      <div class="aling">
@@ -24,17 +25,12 @@
                         <input type="number" id="r" readonly placeholder="RESULTADO">
                 </div>
                     <div class="alingButton">
-                        <button onclick="Enviar()">
+                        <button onclick="enviar()">
                              Button
                         </button>
                  </div>
             </div>
         </div>
      </div>
-
-     <script src="../constrol/Metodos.js">
-        a.numero()
-        b.Enviar()
-     </script>
 </body>
 </html>
