--- a/Viel/index.html
+++ b/Viel/index.html
@@ -28,6 +28,10 @@
                         <button onclick="enviar()">
                              Button
                         </button>
+
+                    <button onclick="limpar()">
+                        limpar
+                    </button>
                  </div>
             </div>
         </div>
